--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
     <main role="main" class="container">
       <!-- <p id="menu" class="text-right"><i class="fas fa-search"></i> <i class="fas fa-user"></i> <i class="fas fa-envelope"></i></p> -->
-      <h1 class="mt-5" style="font-weight:bold;">Play ultimate frisbee in <span class="location"><i class="fas fa-map-marker-alt"></i> Cologne</span></h1>
-      <p class="lead"><i class="fas fa-users"></i> 5-10</p>
+      <h1 class="mt-5" style="font-weight:bold;margin-bottom:20px;">Play ultimate frisbee in <span class="location"><i class="fas fa-map-marker-alt"></i> Cologne</span></h1>
+      <p class="lead" style="margin-bottom: 10px;"><span class="participants"><i class="fas fa-users"></i> 5-10</span></p>
       <p class="lead"><span class="time-soon"><i class="fas fa-clock"></i> in 2 hours</span></p>
 
       <!-- <button class="btn">JOIN <i class="fas fa-info-circle"></i></button> -->
