some design ideas

--- a/index.html
+++ b/index.html
@@ -27,11 +27,44 @@
       <p id="menu" class="text-right"><i class="fas fa-search"></i> <i class="fas fa-user"></i> <i class="fas fa-envelope"></i></p>
     </main>
 
-    <main role="main" class="container">
+        <main role="main" class="container">
       <!-- <p id="menu" class="text-right"><i class="fas fa-search"></i> <i class="fas fa-user"></i> <i class="fas fa-envelope"></i></p> -->
       <h1 class="mt-5" style="font-weight:bold;margin-bottom:20px;">Play ultimate frisbee in <span class="location"><i class="fas fa-map-marker-alt"></i> Cologne</span></h1>
       <p class="lead" style="margin-bottom: 10px;"><span class="participants"><i class="fas fa-users"></i> 5-10</span></p>
       <p class="lead"><span class="time-soon"><i class="fas fa-clock"></i> in 2 hours</span></p>
+
+      <!-- <button class="btn">JOIN <i class="fas fa-info-circle"></i></button> -->
+    </main>
+
+    <main role="main" class="container" style="background-color: #8bc776;">
+      <!-- <p id="menu" class="text-right"><i class="fas fa-search"></i> <i class="fas fa-user"></i> <i class="fas fa-envelope"></i></p> -->
+      <h1 class="mt-5" style="font-weight:bold;margin-bottom:20px;padding-top:15px;">Play ultimate frisbee in <span style="color:#8bc776;" class="location"><i class="fas fa-map-marker-alt"></i> Cologne</span></h1>
+      <p class="lead" style="margin-bottom: 10px;"><span class="participants" style="color:#8bc776;"><i class="fas fa-users"></i> 3/10</span></p>
+      <p class="lead" style="margin-bottom:10px;"><span class="time-soon"><i class="fas fa-clock"></i> Today, 4:00 pm</span></p>
+
+      <!-- <button class="btn">JOIN <i class="fas fa-info-circle"></i></button> -->
+    </main>
+
+    <main role="main" class="container" style="background-color: #8bc776;margin-top: -10px;
+    padding-top: 10px;
+    padding-bottom: 20px;">
+      <div id="desc" class="container" style="background-color:white;border-radius:5px;color: black;box-shadow: 3px 3px 1px #80a573;">
+        Hey all :)<br />
+        I would like to have some quick frisbee matches in cologne...<br />
+        Lukas
+      </div>
+      <!-- <p class="lead" style="margin-bottom: 10px;"><span class="participants"><i class="fas fa-users"></i> 5-10</span></p> -->
+      
+
+      <!-- <button class="btn">JOIN <i class="fas fa-info-circle"></i></button> -->
+    </main>
+
+
+        <main role="main" class="container">
+      <!-- <p id="menu" class="text-right"><i class="fas fa-search"></i> <i class="fas fa-user"></i> <i class="fas fa-envelope"></i></p> -->
+      <h1 class="mt-5" style="font-weight:bold;margin-bottom:20px;">What is VLIMMR?</h1>
+      <p class="lead" style="color: #867127;font-weight: 400;font-size: 1rem;text-align:justify;">VLIMMR is a location based search engine for activities of any kind. We have these goals: Events should really take place with the expected participants and people shall be encouraged to do new things and get to know new people without and pre knowledge. To guarantee safe ... we follow these rules<br/><br/>1) Events need to happen in the next 36 hours. This is to make sure that everyone joining the event will really take part and will not be impeded in any way. Events will also be deleted after they happened. This shall support the creation of new events and also more specific event descriptions opposed to large groups which depend on the admin and eventually are dead. Everyon shall participate!<br/>2) You don't know very much about the event you are joining (except title, city and min/max participants). I felt that knowing that for example nobody seems to participate and event or knowing too much about the organiser is rather bad and leads to avoid an event. BTW: You can always leave events, that's fine. But please beware some kind of transparency and tell the group members why not.<br/><br/>VLIMMR is very easy to use. You can easily join events or create one by yourself. The focus lays on spontaneousity and also the unexpected. It's important for me to not give you a list of all events happening in a city. This might make you blind for new or unusale events you normally would not participate in. VLIMMR gives you excaclty one event that you can either join or not. But be careful: It will be lost forever if you neglect it! To give a starting point you still can use a search which helps you find an event you really like.<br/><br/>Alright. That's it. To get to know more about using VLIMMR you can click here. But it is rather intuitive, so why not start right here?</p>
+
 
       <!-- <button class="btn">JOIN <i class="fas fa-info-circle"></i></button> -->
     </main>
