--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main role="main" class="container" style="background-color: #8bc776;">
       <!-- <p id="menu" class="text-right"><i class="fas fa-search"></i> <i class="fas fa-user"></i> <i class="fas fa-envelope"></i></p> -->
       <h1 class="mt-5" style="font-weight:bold;margin-bottom:20px;padding-top:15px;">Play ultimate frisbee in <span style="color:#8bc776;" class="location"><i class="fas fa-map-marker-alt"></i> Cologne</span></h1>
-      <p class="lead" style="margin-bottom: 10px;"><span class="participants" style="color:#8bc776;"><i class="fas fa-users"></i> 3/10</span></p>
+      <p class="lead" style="margin-bottom: 10px;"><span class="participants" style="color:#8bc776;"><i class="fas fa-users"></i> 3/10 <i class="fas fa-arrow-circle-down"></i></span></p>
       <p class="lead" style="margin-bottom:10px;"><span class="time-soon"><i class="fas fa-clock"></i> Today, 4:00 pm</span></p>
 
       <!-- <button class="btn">JOIN <i class="fas fa-info-circle"></i></button> -->
